--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
     "editor"
   ],
   "author": "wingillis",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
+    "browserify-hmr": "^0.3.5",
+    "watchify": "^3.9.0"
+  }
 }
