--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "Markdown note taking app inspired by bear",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watchify": "watchify -vd -p browserify-hmr -e main.js -o dist/build.js",
+    "serve": "http-server -o -c 1 -a localhost",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npm-run-all --parallel watchify serve"
   },
   "keywords": [
     "markdown",
     "notes",
     "editor"
   ],
+  "browserify": {
+    "transform": [
+      "babelify"
+    ]
+  },
   "author": "wingillis",
   "license": "ISC",
   "devDependencies": {
@@ -18,6 +26,11 @@
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "browserify-hmr": "^0.3.5",
+    "codemirror": "^5.29.0",
+    "npm-run-all": "^4.1.1",
     "watchify": "^3.9.0"
+  },
+  "dependencies": {
+    "pouchdb": "^6.3.4"
   }
 }
