--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
   ],
   "browserify": {
     "transform": [
-      "babelify"
+      "babelify",
+      "vueify"
     ]
+  },
+  "browser": {
+    "vue": "./node_modules/vue/dist/vue.common.js"
   },
   "author": "wingillis",
   "license": "ISC",
@@ -30,10 +34,12 @@
     "mocha": "^3.5.0",
     "npm-run-all": "^4.1.1",
     "uuid": "^3.1.0",
+    "vueify": "^9.4.1",
     "watchify": "^3.9.0"
   },
   "dependencies": {
     "highlight.js": "^9.12.0",
-    "pouchdb": "^6.3.4"
+    "pouchdb": "^6.3.4",
+    "vue": "^2.4.2"
   }
 }
