--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "Markdown note taking app inspired by bear",
   "main": "app.js",
   "scripts": {
-    "watchify": "watchify -vd -p browserify-hmr -e main.js -o dist/build.js",
-    "serve": "http-server -o -c 1 -a localhost",
     "test": "mocha",
-    "dev": "npm-run-all --parallel watchify serve"
   },
   "keywords": [
     "markdown",
@@ -20,17 +17,17 @@
       "vueify"
     ]
   },
-  "browser": {
-    "vue": "./node_modules/vue/dist/vue.common.js"
-  },
   "author": "wingillis",
   "license": "ISC",
   "devDependencies": {
     "babel": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "browserify-hmr": "^0.3.5",
     "codemirror": "^5.29.0",
+    "electron-rebuild": "^1.6.0",
+    "electron-reload": "^1.2.1",
     "mocha": "^3.5.0",
     "npm-run-all": "^4.1.1",
     "uuid": "^3.1.0",
@@ -38,6 +35,7 @@
     "watchify": "^3.9.0"
   },
   "dependencies": {
+    "electron": "^1.7.5",
     "highlight.js": "^9.12.0",
     "markdown-it": "^8.4.0",
     "pouchdb": "^6.3.4",
