image widget working correctly

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Markdown note taking app inspired by bear",
   "main": "app.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha"
   },
   "keywords": [
     "markdown",
