--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "highlight.js": "^9.12.0",
     "markdown-it": "^8.4.0",
     "pouchdb": "^6.3.4",
+    "pouchdb-find": "^6.3.4",
     "vue": "^2.4.2"
   }
 }
