--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "electron-reload": "^1.2.1",
     "mocha": "^3.5.0",
     "npm-run-all": "^4.1.1",
+    "oauth": "^0.9.15",
     "uuid": "^3.1.0",
     "vueify": "^9.4.1",
     "watchify": "^3.9.0"
   },
   "dependencies": {
     "electron": "^1.7.5",
+    "evernote": "^2.0.1-beta",
     "highlight.js": "^9.12.0",
     "markdown-it": "^8.4.0",
     "pouchdb": "^6.3.4",
