--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "electron": "^1.7.5",
     "evernote": "^2.0.1-beta",
     "highlight.js": "^9.12.0",
+    "htmltoenml": "^1.3.0",
     "markdown-it": "^8.4.0",
     "pouchdb": "^6.3.4",
     "pouchdb-find": "^6.3.4",
